@@ -1,3 +1,9 @@
+2012-06-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOBasic.c (TclOOCurrentDefinitionObjCmd): Added command
+	* generic/tclOO.c (InitFoundation): that lets scripted additional
+	definitions discover what object or class is undergoing definition.
+
 2012-05-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOBasic.c (TclOO_Class_Constructor): [Bug 2023112]: Cut
